--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -53,3 +53,28 @@ ds=df_colon %>%
     
 print(ds)
 ```
+
+    
+# 2. Plot creation  (use package ggsurvfit)
+
+We recommend using the ggsurvfit package with the survfit2 function instead of survfit2 function.
+
+Please follow the following link to obtain your kaplan Meier Curves
+https://www.danieldsjoberg.com/ggsurvfit/articles/gallery.html
+
+Kaplan-Meier by Daniel D. Sjoberg, Mark Baillie, Charlotta Fruechtenicht, Steven Haesendonckx, Tim Treis.
+
+```{r}
+survfit2(Surv(time, status) ~ surg, data = df_colon) %>%
+  ggsurvfit(linetype_aes = TRUE) +
+  add_confidence_interval() +
+  add_risktable(
+    risktable_stats = c("n.risk", "cum.censor", "cum.event")
+  ) +
+  theme_ggsurvfit_KMunicate() +
+  scale_y_continuous(limits = c(0, 1)) +
+  scale_x_continuous(expand = c(0.02, 0)) +
+  theme(legend.position.inside = c(0.85, 0.85))
+```
+
+
