--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -1,19 +1,33 @@
 ---
 title: "Kaplan Meier instruction suggestion"
-author: "LP"
+author: "Livia Pierotti"
 date: "2024-11-26"
 output: rmarkdown::html_vignette
 vignette: >
-%\VignetteIndexEntry{kaplan_meier}
-%\VignetteEngine{knitr::rmarkdown}
-%\VignetteEncoding{UTF-8}
+  %\VignetteIndexEntry{kaplan_meier}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r, include=FALSE, warning=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
+library(tidyverse)
+t0 = ISOdate(2020, 01, 01, tz="EST")
+data_surv = ggsurvfit::df_colon %>% 
+  mutate(
+    date_enrol = t0 + abs(rnorm(n(), 100, 10)), 
+    date_eos = date_enrol + time,
+    death_eos = status,
+    date_progression = date_enrol + time*runif(n(), 0.6, 0.8),
+    date_progression = if_else(runif(n())>0.2, NA, date_progression), 
+  ) %>% 
+  select(subijd=id, arm=rx, surg, 
+         date_enrol, date_progression, date_eos, death_eos)
+#data_surv est caché (include=FALSE), il suffit donc de présenter le dataset et ses colonnes (comme tu le ferais avec df_colon), puis d'expliquer comment utiliser pmin() pour créer time_os, event_os, time_pfs, event_pfs
 ```
 
 ```{r setup}
