--- a/vignettes/Adverse Event (AE grade) .Rmd
+++ b/vignettes/Adverse Event (AE grade) .Rmd
@@ -8,26 +8,31 @@ date: "2025-01-30"
 ---
 
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# 1. Data
+
+```{r}
+
+library(grstat)
+library(flextable)
+library(dplyr)
+
+# tm = EDCimport::read_trialmaster("path/to/file.zip")
+tm = grstat_example()
+attach(tm)
+
+head(ae)
+
+```
+# 2.Tables Grade
+
+use  ae_table_grade()
+
+```{r}
+ae_table_grade(df_ae=ae, df_enrol=enrolres, arm=NULL, variant="max") %>% 
+  as_flextable(header_show_n=TRUE) %>% 
+  add_footer_lines("Percentages reflect the proportion of patients whose maximum AE grade was as indicated.")
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
