--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -6,9 +6,11 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  
+
 ---
 
-# 1. Data
+# Data
 
 ```{r, include=FALSE, warning=FALSE}
 knitr::opts_chunk$set(
@@ -28,24 +30,9 @@ data_surv = ggsurvfit::df_colon %>%
     # date_progression = if_else(runif(n())>0.2, NA, date_progression), 
   ) %>% 
   select(subijd=id,arm=rx, surg, 
-         date_first_visit,time, date_progression, date_of_last_visit, death)
+         date_first_visit, date_progression, date_of_last_visit, death)
   
 length(unique(data_surv$subijd))
-# rnorm(50,mean=5,sd=2)
-print(data_surv)
-
-# library(tidyverse)
- # t0 = ISOdate(2020, 01, 01, tz="EST")
- # data_surv = ggsurvfit::df_colon %>% 
- #   mutate(
- #    date_enrol = t0 + abs(rnorm(n(), 100, 10)), 
- #    date_eos = date_enrol + time,
- #    death_eos = status,
- #    date_progression = date_enrol + time*runif(n(), 0.6, 0.8),
- #    date_progression = if_else(runif(n())>0.2, NA, date_progression), 
- #   ) %>% 
- #   select(subijd=id, arm=rx, surg, 
- #          date_enrol, date_progression, date_eos, death_eos)
 
 ```
 
@@ -56,7 +43,7 @@ library(survival)
 library(ggsurvfit)
 ```
 
-# 2. Variable Creation
+# Variable Creation
 
 First, the variables time and status (indicating whether an event occurred or was censored) need to be created to enable the use of various functions.
 
@@ -76,19 +63,6 @@ Censored (0) refers to those subjects who did not experience the event during th
 ### Example
 
 ```{r}
-# data <- data.frame(
-#   id = 1:5,
-#   date_of_death = as.Date(c('2023-05-01', '2023-07-15', NA, '2023-09-10', '2023-06-20')),
-#   date_of_relapse = as.Date(c('2023-04-10', NA, '2023-06-01', '2023-08-01', NA)),
-#   date_of_last_visit = as.Date(c('2023-04-15', '2023-06-28', '2023-06-10', '2023-08-01', '2023-06-15')),
-#   date_first_visit = as.Date(c('2023-01-15', '2023-05-20', '2023-03-01', '2023-07-05', '2023-02-10')),
-#   # Event column: 1 for death or relapse, 0 for no event
-#   event = c(1, 0, 1, 1, 0)
-# )
-# 
-# # Print the data frame
-# print(data)
-
 data_surv_v2=data_surv %>%
   mutate(status= ifelse(death==1, 1, 0 )) %>%
   mutate(status_date = case_when(
@@ -101,21 +75,18 @@ data_surv_v2=data_surv %>%
 head(data_surv_v2)
 ```
 
-# 2.Generate the summary of the survival
+# Generate the summary of the survival
 
 We recommend using the survival package with the survfit2 function instead of survfit function.
 
 
 ```{r}
 km.model_PFS <- survfit2(Surv(time_months, status) ~ surg,data = data_surv_v2)
-print(km.model_PFS)
-# il y a beaucoup de NA, c pas genial
-summary(km.model_PFS)
-
+km.model_PFS
 ```
 
 
-# 3.Generate survival curves using ggsurvfit package
+# Generate survival curves using ggsurvfit package
 
 
 Please follow the following link to obtain your kaplan Meier Curves
@@ -124,19 +95,18 @@ https://www.danieldsjoberg.com/ggsurvfit/articles/gallery.html
 Kaplan-Meier by Daniel D. Sjoberg, Mark Baillie, Charlotta Fruechtenicht, Steven Haesendonckx, Tim Treis.
 
 
-```{r}
+```{r fig.width = 7 , fig.height=5}
 
 km = survfit2(Surv(time_days, status) ~ surg, data = data_surv_v2) %>%
   ggsurvfit(linetype_aes = TRUE) +
   add_confidence_interval() +
   add_risktable(
-    risktable_stats = c("n.risk", "cum.censor", "cum.event")
+    risktable_stats = c("n.risk", "cum.censor", "cum.event" )
   ) +
   theme_ggsurvfit_KMunicate() +
   scale_y_continuous(limits = c(0, 1)) +
   scale_x_continuous(expand = c(0.02, 0)) +
-  theme(legend.position.inside = c(0.85, 0.85))
-
+theme(legend.position="inside", legend.position.inside = c(0.85, 0.85))
 km
 ```
 
@@ -144,7 +114,7 @@ km
 
 ### Extra codes to improve the plot
 
-```{r}
+```{r fig.width = 5 ,fig.height=5}
 km +
   add_censor_mark(size = 4, alpha = 0.4) +
   scale_x_continuous(breaks = scales::breaks_width(2), limits=c(0, 8)) +
@@ -155,6 +125,7 @@ km +
     title="Progression Free Survival, (N=X, n event=X)"
   ) +
   theme(legend.position = "top")
+  
 
 ```
 
