recist_report: add title parameter

--- a/inst/templates/template_recist_check.Rmd
+++ b/inst/templates/template_recist_check.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "RECIST Check"
 output: 
   html_document:
     toc: true
 params:
   recist_check: NULL
+  report_title: "RECIST Check"
+title: "`r params$report_title`"
 ---
 
 ```{r init, include=FALSE}
